# test_task_notification

./: .env.sample  README.md  pyproject.toml
config/: celery.py  settings.py  urls.py
notification/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
notification/migrations/: 0001_initial.py  0002_rename_telegram_username_recipientmodel_telegram_chat_id.py
